--- a/Eventify/Views/_ViewImports.cshtml
+++ b/Eventify/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using Eventify
 @using Eventify.Models
+@using Eventify.Models.Enums
+@using Eventify.ViewModels
+@using Eventify.ViewModels.ProfileVM
+@using Eventify.ViewModels.EventVM
+@using Eventify.ViewModels.VenueVM
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
