--- a/Eventify/Views/Shared/_Layout.cshtml
+++ b/Eventify/Views/Shared/_Layout.cshtml
@@ -33,8 +33,6 @@
     <!-- Custom JS -->
     <script src="~/js/site.js"></script>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
